# crmt_sim

./: .gitignore  CMakeLists.txt  FindROOT.cmake  Parameters.cfg  README  README.md  TestVolume.cfg  crmt.cxx  doxygen.cfg
config/: Groups.cfg
doc/: proposal_abstract.txt
doc/proposal/: README  prop.aux  prop.tex
geo_test/: CMakeLists.txt  geo_test.cxx  td.cxx
include/: Line.h  MCTrack.h  Module.h  TestVolume.h  ThreeDdisplay.h  ev3d.h  evd.h  evg.h
lib/: README
old_files/: crmt_sim.cxx
output/: README
scripts/: acp.py  acp1.py  acp_all.py  extract.C  geo_test.cxx  identifier_hits.py  print_coin_ev.py  single_gap_angles.py  testvol_eff.py
scripts/paper_plots/: acp_paper.py
src/: Line.cxx  Line.h  MCTrack.cxx  Makefile  Module.cxx  Module.h  TestVolume.cxx  TestVolume.h  ThreeDdisplay.cxx  crmt.cxx  ev3d.cxx  evd.cxx  evd.h  evg.cxx  evg.h  mutoy.cxx  mutoy_lines_and_fibers
